// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LGraph configure() > LGraph matches previous snapshot (normal configure() usage) > configuredBasicGraph 1`] = `
LGraph {
  "catch_errors": true,
  "config": {},
  "elapsed_time": 0.01,
  "errors_in_execution": undefined,
  "events": CustomEventTarget {},
  "execution_time": undefined,
  "execution_timer_id": undefined,
  "extra": {},
  "filter": undefined,
  "fixedtime": 0,
  "fixedtime_lapse": 0.01,
  "globaltime": 0,
  "id": "ca9da7d8-fddd-4707-ad32-67be9be13140",
  "iteration": 0,
  "last_trigger_time": undefined,
  "last_update_time": 0,
  "links": Map {},
  "list_of_graphcanvas": null,
  "nodes_actioning": [],
  "nodes_executedAction": [],
  "nodes_executing": [],
  "revision": 0,
  "runningtime": 0,
  "starttime": 0,
  "state": {
    "lastGroupId": 123,
    "lastLinkId": 0,
    "lastNodeId": 1,
    "lastRerouteId": 0,
  },
  "status": 1,
  "vars": {},
  "version": 5,
}
`;

exports[`LGraph configure() > LGraph matches previous snapshot (normal configure() usage) > configuredMinGraph 1`] = `
LGraph {
  "catch_errors": true,
  "config": {},
  "elapsed_time": 0.01,
  "errors_in_execution": undefined,
  "events": CustomEventTarget {},
  "execution_time": undefined,
  "execution_timer_id": undefined,
  "extra": {},
  "filter": undefined,
  "fixedtime": 0,
  "fixedtime_lapse": 0.01,
  "globaltime": 0,
  "id": "d175890f-716a-4ece-ba33-1d17a513b7be",
  "iteration": 0,
  "last_trigger_time": undefined,
  "last_update_time": 0,
  "links": Map {},
  "list_of_graphcanvas": null,
  "nodes_actioning": [],
  "nodes_executedAction": [],
  "nodes_executing": [],
  "revision": 0,
  "runningtime": 0,
  "starttime": 0,
  "state": {
    "lastGroupId": 0,
    "lastLinkId": 0,
    "lastNodeId": 0,
    "lastRerouteId": 0,
  },
  "status": 1,
  "vars": {},
  "version": 2,
}
`;
